<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.ui.login.LoginActivity">

    <ImageView
        android:id="@+id/logInLogo"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@+id/innerRelativeLayout"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo" />

    <RelativeLayout
        android:id="@+id/innerRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints="@string/user_name"
            android:background="@color/white"
            android:hint="@string/user_name"
            android:inputType="text"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/userName"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints="@string/password"
            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/logIn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/forgotPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:background="@color/maroon"
            android:text="@string/login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/logIn"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/maroon"
            android:text="@string/sign_up"
            android:textColor="@color/white" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/developed_by_shami"
        android:textColor="@color/white"
        android:textSize="15sp">

    </TextView>

</RelativeLayout>