<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.ui.signup.SignUpActivity">

    <TextView
        android:id="@+id/registrationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/register_yourself"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/registrationLabel"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="60dp">

        <ImageView
            android:id="@+id/circularImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/profile_picture_logo"
            android:contentDescription="@string/profile_picture"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/cardView"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="@string/user_name"
        android:background="@color/white"
        android:hint="@string/user_name"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/userName"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="@string/password"
        android:background="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="@string/repeat_password"
        android:background="@color/white"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/repeatPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="@string/gender"
        android:background="@color/white"
        android:hint="@string/gender"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/gender"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:background="@color/maroon"
        android:text="@string/sign_up"
        android:textColor="@color/white" />

</RelativeLayout>